--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,27 +1,25 @@
 trigger:
   branches:
     include:
-      -main
+      - main
 
 pool:
-  vmImage:'ubuntu-latest'
+  vmImage: 'ubuntu-latest'
 
 stages:
  - stage: Build
-   jobs
-   -job: BuildJob
-    steps:
-   - script: 
-      npm install
-      displayName: 'Installing Dependencies'
+   jobs:
+   - job: BuildJob
+     steps:
+     - script: npm install
+       displayName: 'Installing Dependencies'
 
-   - script:
-     npm run build
-     displayName: 'Running Build'
+     - script: npm run build
+       displayName: 'Running Build'
 
-   - task: PulishBuildArtifacts@1
-     inputs: 
-     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
-     artifactName: 'drop'
-     publishLocation: 'Container'
-     displaName: 'Publish Artifacts' 
+     - task: PublishBuildArtifacts@1
+       inputs: 
+         pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+         artifactName: 'drop'
+         publishLocation: 'Container'
+       displayName: 'Publish Artifacts'
