--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ stages:
    jobs:
    - job: BuildJob
      steps:
+     - checkout: self
      - script: |
         npm install
        displayName: 'Installing Dependencies'
